--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <hr style="width:35%">
 
-<center><a href="aaa" style="color:#6d6d6d;">One1</a> <a href="aaa" style="color:#6d6d6d;">Two2</a> <a href="aaa" style="color:#6d6d6d;">Three3</a></center>
+<center><a href="https://zandolin.github.io/One1/" style="color:#6d6d6d;">One1</a> <a href="https://zandolin.github.io/Two2/" style="color:#6d6d6d;">Two2</a> <a href="https://zandolin.github.io/Three3/" style="color:#6d6d6d;">Three3</a></center>
 
 
 </body>
