--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 </head>
 <body>
  
-<center><a1 href="https://postimg.cc/Jyh4QmvK" target="_blank"><img src="https://i.postimg.cc/Jyh4QmvK/image-part-004.jpg" alt="image-part-004"/></a1><br/><br/>
-</center>
+<center><<a1 href="https://postimg.cc/8FTvFR7x" target="_blank"><img src="https://i.postimg.cc/8FTvFR7x/image-part-004.jpg" alt="image-part-004"/></a1><br/><br/></center>
 
 <h1>Can resist a history</h1>
 
